# arbitrary

./: .gitattributes  .gitignore  LICENSE  README.md  index-generator.md  index.html  index.md
.github/workflows/: gh-pages.yml
bezier/: Cargo.toml  README.md  index.html  sw.js
bezier/benches/: poly.rs
bezier/examples/editor/: app.rs  configure.rs  controls.rs  interact.rs  main.rs  option.rs  plot.rs  point.rs
bezier/examples/editor/interact/: corner.rs  mod.rs  point.rs  smooth.rs
bezier/examples/editor/window/: configure.rs  mod.rs  shape.rs
bezier/src/: app.rs  bezier.rs  color.rs  constants.rs  lib.rs  line.rs  main.rs  option.rs  point.rs  shape.rs
bezier/src/curve/: bezier.rs  mod.rs  nearest.rs  point.rs  segment.rs
bezier/src/math/: mod.rs  poly.rs  sturm.rs
bezier/src/point/: corner.rs  mod.rs  smooth.rs
bezier/src/segment/: bezier.rs  line.rs  mod.rs  point.rs
visualmap/: index.html  solve.js  visual.js
