[package]
name = "bezier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_plot = "0.23.0"
log = "0.4.20"

[dependencies.eframe]
version = "0.23.0"
default-features = false
features = ["glow", "wayland", "x11", "default_fonts"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
